--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -62,9 +62,11 @@ $border: #D5D5D5;
 
 // ------- Sidebar Styles
 img.avatar {
+  display: block;
   margin: 0 auto;
+  margin-bottom: 20px;
+  margin-top: 35px;
   border-radius: 50%;
-  margin: 35px 0 20px 0;
   height: 250px;
   border: 1px solid black;
 }
@@ -107,6 +109,7 @@ p.about_me {
     padding-left: 0;
     a {
       color: $dark;
+      text-align: left;
       white-space: nowrap;
       font-size: .8rem;
       font-weight: 700;
@@ -281,4 +284,14 @@ ul li a {
 			background: $white;
 		}
 	}
+}
+
+@media only screen and (max-width: 71.25em) {
+  #popular_posts ul a {
+    display: block;
+    text-align: center;
+  }
+  img.avatar {
+    margin-top: 0;
+  }
 }
