--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -175,6 +175,13 @@ hr {
 		color: $white;
 	}
 }
+
+@media only screen and (max-width: 71.25em) {
+  .navbar .name {
+    font-size: 1.25em;
+  }
+}
+
 .navbar-inverse { background-color: $background}
 .navbar-inverse .navbar-nav>.active>a:hover,.navbar-inverse
 .navbar-nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:focus {
@@ -315,7 +322,7 @@ input[type="submit"], .button {
 	text-align: center;
 }
 
-@media only screen and (min-width: 768px) { 
+@media only screen and (max-width: 71.25em) {
   hr {
     text-align: left;
   }
