--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -67,8 +67,9 @@ img.avatar {
   margin-bottom: 20px;
   margin-top: 35px;
   border-radius: 50%;
+  box-shadow: 0 0 7px 1px grey;
   height: 250px;
-  border: 1px solid black;
+  border: 1px grey;
 }
 
 p.about_me {
